--- a/forms.html
+++ b/forms.html
@@ -19,6 +19,9 @@
     height: 100vh;
     margin: 0;
     background-color: #f5f5f5;
+    background-color: darkgrey;
+    background-image: linear-gradient(to right , darkgrey, #eeee);
+    
 }
 
 .form-container, .thank-you-container {
